--- a/00-library-server/build.gradle
+++ b/00-library-server/build.gradle
@@ -65,6 +65,7 @@ dependencies {
         exclude group: 'junit', module: 'junit'
     }
     testCompile('io.projectreactor:reactor-test')
+    testCompile('com.nhaarman:mockito-kotlin:1.5.0')
     testCompile('org.springframework.restdocs:spring-restdocs-webtestclient')
     testCompile('org.junit.jupiter:junit-jupiter-api')
     testRuntime('org.junit.jupiter:junit-jupiter-engine')
