--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,37 @@
-
+buildscript {
+    ext.kotlin_version = '1.2.41'
+    
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
 dependencies {
+}
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'kotlin'
+
+    compileKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+            javaParameters = true
+            freeCompilerArgs = ['-Xenable-jvm-default']
+        }
+    }
+    compileTestKotlin {
+        kotlinOptions {
+            jvmTarget = "1.8"
+            javaParameters = true
+            freeCompilerArgs = ['-Xenable-jvm-default']
+        }
+    }
+
+    dependencies {
+        compile group: 'com.fasterxml.jackson.module', name: 'jackson-module-kotlin', version: '2.9.5'
+        compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlin_version
+        compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: kotlin_version
+    }
 }
