--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
     }
 }
 dependencies {
@@ -13,6 +14,11 @@ dependencies {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'kotlin'
+    apply plugin: 'kotlin-noarg'
+
+    noArg {
+        annotation("com.example.library.server.common.NoArgConstructor")
+    }
 
     compileKotlin {
         kotlinOptions {
