--- a/01-library-server/build.gradle
+++ b/01-library-server/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     }
     testCompile('org.springframework.security:spring-security-test')
     testCompile('io.projectreactor:reactor-test')
+    testCompile('com.nhaarman:mockito-kotlin:1.5.0')
     testCompile('org.springframework.restdocs:spring-restdocs-webtestclient')
     testCompile('org.junit.jupiter:junit-jupiter-api')
     testRuntime('org.junit.jupiter:junit-jupiter-engine')
