--- a/03-library-server/build.gradle
+++ b/03-library-server/build.gradle
@@ -66,6 +66,7 @@ dependencies {
         exclude group: 'junit', module: 'junit'
     }
     testCompile('org.springframework.security:spring-security-test')
+    testCompile('com.nhaarman:mockito-kotlin:1.5.0')
     testCompile('io.projectreactor:reactor-test')
     testCompile('org.springframework.restdocs:spring-restdocs-webtestclient')
     testCompile('org.junit.jupiter:junit-jupiter-api')
