Ported initial-oauth2-login-client, library-server, and oauth2-login-client sub-modules of 05-oath2-client to Kotlin

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ subprojects {
 
     noArg {
         annotation("com.example.library.server.common.NoArgConstructor")
+        annotation("javax.persistence.Entity")
     }
 
     compileKotlin {
