--- a/05-oauth2-client/library-server/build.gradle
+++ b/05-oauth2-client/library-server/build.gradle
@@ -64,6 +64,7 @@ dependencies {
     compile('org.apache.commons:commons-collections4:4.1')
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testCompile('com.nhaarman:mockito-kotlin:1.5.0')
     testCompile('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'junit', module: 'junit'
     }
